--- a/sorry.html
+++ b/sorry.html
@@ -59,21 +59,15 @@
                     <h2 class="message-title">To My Love</h2>
                     <div class="message-text">
                         <p>
-                            I know I've hurt you, and seeing you upset is the last thing I ever wanted.
-                            You mean everything to me, and my actions didn't reflect the love I have for you.
-                        </p>
-                        <p>
-                            I promise to be better, to listen more, and to cherish every moment with you.
-                            Please give me a chance to make it right.
-                        </p>
-                        <p>
-                            I miss your smile. I miss us. Please forgive me.
+                           I know I was wrong on the 10th, 31st, 7th, and 8th, but the thing is, you're one of the strongest girls I've ever witnessed. 
+                           People say that presence, attention, and support are what truly make a human connection meaningful, but I was acting so nonchalant that I ended up taking you for granted.
+                           The issue is, this is the real me—I don't run or fear from fights, but because of this attitude, I've always downgraded myself. Still, I'm not a feeka (tasteless) person. I may be a fool to others, but for you, I could be a phool ki kali.
                         </p>
                     </div>
 
                     <div style="margin-top: 3rem; text-align: center;">
                         <button class="love-button" id="forgiveBtn" onclick="celebrateForgiveness()">
-                            <span class="btn-text">I Forgive You 💖</span>
+                            <span class="btn-text">SORRY 💖</span>
                             <span class="btn-burst"></span>
                         </button>
                     </div>
