--- a/sorry.html
+++ b/sorry.html
@@ -59,9 +59,17 @@
                     <h2 class="message-title">To My Love</h2>
                     <div class="message-text">
                         <p>
-                           I know I was wrong on the 10th, 31st, 7th, and 8th, but the thing is, you're one of the strongest girls I've ever witnessed. 
-                           People say that presence, attention, and support are what truly make a human connection meaningful, but I was acting so nonchalant that I ended up taking you for granted.
-                           The issue is, this is the real me—I don't run or fear from fights, but because of this attitude, I've always downgraded myself. Still, I'm not a feeka (tasteless) person. I may be a fool to others, but for you, I could be a phool ki kali.
+                            I know I was wrong on the 10th, 31st, 7th, and 8th, but the thing is, you're one of the
+                            strongest girls I've ever witnessed.
+                        </p>
+                        <p>
+                            People say that presence, attention, and support are what truly make a human connection
+                            meaningful, but I was acting so nonchalant that I ended up taking you for granted.
+                        </p>
+                        <p>
+                            The issue is, this is the real me—I don't run or fear from fights, but because of this
+                            attitude, I've always downgraded myself. Still, I'm not a feeka (tasteless) person. I may be
+                            a fool to others, but for you, I could be a phool ki kali.
                         </p>
                     </div>
 
