--- a/index.html
+++ b/index.html
@@ -1,110 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy Valentine's Day ❤️</title>
+  <meta charset="UTF-8">
+  <title>Happy Valentine’s Day ❤️</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800&family=Inter:wght@300;400;500;600&family=Dancing+Script:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@300;400;500&family=Dancing+Script:wght@600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
-<canvas id="heartsCanvas"></canvas>
-
-<!-- HERO -->
-<section class="section section-hero">
-  <div class="hero-content">
-    <h1>Happy <span>Valentine's Day</span></h1>
-    <p>Vikhiat ❤️ Nikita</p>
-  </div>
+<section class="section hero">
+  <h1>Happy <span>Valentine’s Day</span></h1>
+  <p>Vikhiat ❤️ Nikita</p>
 </section>
 
-<!-- GALLERY -->
-<section class="section section-gallery">
-  <div class="gallery-content">
+<section class="section gallery">
+  <h2>Moments That <em>Make Us, Us</em></h2>
 
-    <h2>Moments That <em>Make Us, Us</em></h2>
+  <div class="gallery-track">
 
-    <div class="gallery-scroll-container">
-      <div class="gallery-track">
-
-        <div class="gallery-card">
-          <img src="imag/img_1.jpg" alt="Memory 1">
-          <h3>Our First Date</h3>
-          <p>Hona Tha Pyaar ✨</p>
-        </div>
-
-        <div class="gallery-card">
-          <img src="imag/img_2.jpg" alt="Memory 2">
-          <h3>That Special One</h3>
-          <p>Meri Banogi kya 🌟</p>
-        </div>
-
-        <div class="gallery-card">
-          <img src="imag/img_3.jpg" alt="Memory 3">
-          <h3>Everyday Magic</h3>
-          <p>Ik Kudi 💫</p>
-        </div>
-
-        <div class="gallery-card">
-          <img src="imag/img4.jpg" alt="Memory 4">
-          <h3>Together Forever</h3>
-          <p>Adat 💕</p>
-        </div>
-
-        <div class="gallery-card">
-          <img src="imag/img5.jpg" alt="Memory 5">
-          <h3>Date Right?</h3>
-          <p>Rakhlo Tum Chupaake 🎉</p>
-        </div>
-
-        <div class="gallery-card">
-          <img src="imag/img6.jpg" alt="Memory 6">
-          <h3>Always & Forever</h3>
-          <p>Tum Se Hi 💖</p>
-        </div>
-
-      </div>
+    <div class="card">
+      <img src="imag/img_1.jpg" alt="Memory 1">
+      <h3>Our First Date</h3>
+      <p>Hona Tha Pyaar ✨</p>
     </div>
 
-    <p class="gallery-hint">← Swipe to see more →</p>
+    <div class="card">
+      <img src="imag/img_2.jpg" alt="Memory 2">
+      <h3>That Special One</h3>
+      <p>Meri Banogi kya 🌟</p>
+    </div>
+
+    <div class="card">
+      <img src="imag/img_3.jpg" alt="Memory 3">
+      <h3>Everyday Magic</h3>
+      <p>Ik Kudi 💫</p>
+    </div>
+
+    <div class="card">
+      <img src="imag/img4.jpg" alt="Memory 4">
+      <h3>Together Forever</h3>
+      <p>Adat 💕</p>
+    </div>
+
+    <div class="card">
+      <img src="imag/img5.jpg" alt="Memory 5">
+      <h3>Date Right?</h3>
+      <p>Rakhlo Tum Chupaake 🎉</p>
+    </div>
+
+    <div class="card">
+      <img src="imag/img6.jpg" alt="Memory 6">
+      <h3>Always & Forever</h3>
+      <p>Tum Se Hi 💖</p>
+    </div>
 
   </div>
 </section>
 
-<!-- MESSAGE -->
-<section class="section section-message">
-  <div class="message-card">
+<section class="section message">
+  <div class="message-box">
     <h2>To My Duffer ❤️</h2>
-
     <p>
-      Sorry for being lazy sometimes, but never lazy in loving you.
-      You’re not a burden — you’re my peace.
+      You were never a burden. You were always my peace.
+      Thank you for choosing me and staying.
     </p>
-
-    <p>
-      Thank you for choosing me, loving me, and staying.
-    </p>
-
-    <a href="sorry.html" class="love-btn">Read My Heart 💌</a>
-
-    <div class="signature">
-      Forever Yours,<br>
-      <strong>Vicks</strong>
-    </div>
+    <p>Forever Yours,<br><strong>Vicks</strong></p>
+    <a href="sorry.html">Read My Heart 💌</a>
   </div>
 </section>
 
-<!-- MUSIC -->
-<audio id="bgMusic" loop>
-  <source src="music.mp3" type="audio/mpeg">
-</audio>
-
-<script src="script.js"></script>
 </body>
 </html>
