--- a/index.html
+++ b/index.html
@@ -1,76 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Happy Valentine’s Day ❤️</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Valentine's Day ❤️</title>
+    <meta name="description" content="A special Valentine's Day page for the love of my life">
 
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@300;400;500&family=Dancing+Script:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600&family=Inter:wght@300;400;500;600&family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-<section class="section hero">
-  <h1>Happy <span>Valentine’s Day</span></h1>
-  <p>Vikhiat ❤️ Nikita</p>
+<canvas id="heartsCanvas"></canvas>
+
+<nav class="nav-dots">
+    <button class="nav-dot active"></button>
+    <button class="nav-dot"></button>
+    <button class="nav-dot"></button>
+    <button class="nav-dot"></button>
+</nav>
+
+<!-- HERO -->
+<section class="section section-hero" id="hero">
+    <div class="hero-bg-orbs">
+        <div class="orb orb-1"></div>
+        <div class="orb orb-2"></div>
+        <div class="orb orb-3"></div>
+    </div>
+
+    <div class="hero-content reveal">
+        <div class="hero-badge">💕 February 14, 2026</div>
+
+        <h1 class="hero-title">
+            <span class="title-line">Happy</span>
+            <span class="title-line accent">Valentine's Day</span>
+        </h1>
+
+        <div class="hero-names glass-card">
+            <span>Vikhiat Bhagat</span>
+            <span class="name-heart">❤️</span>
+            <span>Nikita Pruthi</span>
+        </div>
+
+        <p class="hero-subtitle">Every moment with you is a beautiful memory</p>
+    </div>
 </section>
 
-<section class="section gallery">
-  <h2>Moments That <em>Make Us, Us</em></h2>
+<!-- GALLERY -->
+<section class="section section-gallery" id="gallery">
+    <div class="gallery-content">
 
-  <div class="gallery-track">
+        <div class="gallery-header reveal">
+            <p class="section-label">Our Memories</p>
+            <h2 class="section-title">Moments That<br><em>Make Us, Us</em></h2>
+        </div>
 
-    <div class="card">
-      <img src="imag/img_1.jpg" alt="Memory 1">
-      <h3>Our First Date</h3>
-      <p>Hona Tha Pyaar ✨</p>
+        <div class="gallery-scroll-container">
+            <div class="gallery-track">
+
+                <!-- CARD 1 -->
+                <div class="gallery-card reveal-card">
+                    <div class="gallery-card-inner">
+                        <div class="gallery-img-wrapper">
+                            <img src="imag/img_1.jpg" class="gallery-img" alt="Memory 1">
+                        </div>
+                        <div class="gallery-card-caption">
+                            <h3>Our First Date</h3>
+                            <p>Hona Tha Pyaar ✨</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CARD 2 -->
+                <div class="gallery-card reveal-card">
+                    <div class="gallery-card-inner">
+                        <div class="gallery-img-wrapper">
+                            <img src="imag/img_2.jpg" class="gallery-img" alt="Memory 2">
+                        </div>
+                        <div class="gallery-card-caption">
+                            <h3>That Special One</h3>
+                            <p>Meri Banogi kya 🌟</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CARD 3 -->
+                <div class="gallery-card reveal-card">
+                    <div class="gallery-card-inner">
+                        <div class="gallery-img-wrapper">
+                            <img src="imag/img_3.jpg" class="gallery-img" alt="Memory 3">
+                        </div>
+                        <div class="gallery-card-caption">
+                            <h3>Everyday Magic</h3>
+                            <p>Ik Kudi 💫</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CARD 4 -->
+                <div class="gallery-card reveal-card">
+                    <div class="gallery-card-inner">
+                        <div class="gallery-img-wrapper">
+                            <img src="imag/img4.jpg" class="gallery-img" alt="Memory 4">
+                        </div>
+                        <div class="gallery-card-caption">
+                            <h3>Together Forever</h3>
+                            <p>Adat 💕</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CARD 5 -->
+                <div class="gallery-card reveal-card">
+                    <div class="gallery-card-inner">
+                        <div class="gallery-img-wrapper">
+                            <img src="imag/img5.jpg" class="gallery-img" alt="Memory 5">
+                        </div>
+                        <div class="gallery-card-caption">
+                            <h3>Date right?</h3>
+                            <p>Rakhlo Tum Chupaake 🎉</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CARD 6 -->
+                <div class="gallery-card reveal-card">
+                    <div class="gallery-card-inner">
+                        <div class="gallery-img-wrapper">
+                            <img src="imag/img6.jpg" class="gallery-img" alt="Memory 6">
+                        </div>
+                        <div class="gallery-card-caption">
+                            <h3>Always & Forever</h3>
+                            <p>Tum se hi 💖</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="gallery-scroll-hint reveal">
+            <span>← Swipe to see more →</span>
+        </div>
     </div>
-
-    <div class="card">
-      <img src="imag/img_2.jpg" alt="Memory 2">
-      <h3>That Special One</h3>
-      <p>Meri Banogi kya 🌟</p>
-    </div>
-
-    <div class="card">
-      <img src="imag/img_3.jpg" alt="Memory 3">
-      <h3>Everyday Magic</h3>
-      <p>Ik Kudi 💫</p>
-    </div>
-
-    <div class="card">
-      <img src="imag/img4.jpg" alt="Memory 4">
-      <h3>Together Forever</h3>
-      <p>Adat 💕</p>
-    </div>
-
-    <div class="card">
-      <img src="imag/img5.jpg" alt="Memory 5">
-      <h3>Date Right?</h3>
-      <p>Rakhlo Tum Chupaake 🎉</p>
-    </div>
-
-    <div class="card">
-      <img src="imag/img6.jpg" alt="Memory 6">
-      <h3>Always & Forever</h3>
-      <p>Tum Se Hi 💖</p>
-    </div>
-
-  </div>
 </section>
 
-<section class="section message">
-  <div class="message-box">
-    <h2>To My Duffer ❤️</h2>
-    <p>
-      You were never a burden. You were always my peace.
-      Thank you for choosing me and staying.
-    </p>
-    <p>Forever Yours,<br><strong>Vicks</strong></p>
-    <a href="sorry.html">Read My Heart 💌</a>
-  </div>
+<!-- MESSAGE -->
+<section class="section section-message" id="message">
+    <div class="message-content">
+        <div class="message-card glass-card reveal">
+            <div class="message-icon">💌</div>
+            <h2 class="message-title">To My Duffer ❤️</h2>
+
+            <p class="message-text">
+                You were never a burden. You were always my peace.
+            </p>
+
+            <div class="message-signature">
+                <span>Forever Yours,</span>
+                <span class="signature-name">Vicks</span>
+            </div>
+        </div>
+    </div>
 </section>
 
+<audio id="bgMusic" loop>
+    <source src="music.mp3" type="audio/mpeg">
+</audio>
+
+<script src="script.js"></script>
 </body>
 </html>
