--- a/index.html
+++ b/index.html
@@ -119,80 +119,91 @@
     <!-- SECTION 3: PHOTO GALLERY / MEMORIES                                -->
     <!-- ================================================================== -->
     <section class="section section-gallery" id="gallery">
-    <div class="gallery-content">
+        <div class="gallery-content">
 
-        <div class="gallery-header reveal">
-            <p class="section-label">Our Memories</p>
-            <h2 class="section-title">Moments That<br><em>Make Us, Us</em></h2>
-        </div>
+            <div class="gallery-header reveal">
+                <p class="section-label">Our Memories</p>
+                <h2 class="section-title">Moments That<br><em>Make Us, Us</em></h2>
+            </div>
 
-        <div class="gallery-scroll-container">
-            <div class="gallery-track">
+            <div class="gallery-scroll-container">
+                <div class="gallery-track">
 
-                <!-- CARD 1 -->
-                <div class="gallery-card reveal-card">
-                    <div class="gallery-card-inner">
-                        <div class="gallery-img-wrapper">
-                            <img src="imag/img_1.jpg" class="gallery-img" alt="Memory 1">
-                        </div>
-                        <div class="gallery-card-caption">
-                            <h3>Our First Date</h3>
-                            <p>Hona Tha Pyaar ✨</p>
+                    <!-- CARD 1 -->
+                    <div class="gallery-card reveal-card">
+                        <div class="gallery-card-inner">
+                            <div class="gallery-img-wrapper">
+                                <img src="images/img_1.jpg" class="gallery-img" alt="Memory 1">
+                            </div>
+                            <div class="gallery-card-caption">
+                                <h3>Our First Date</h3>
+                                <p>Hona Tha Pyaar ✨</p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- CARD 2 -->
-                <div class="gallery-card reveal-card">
-                    <div class="gallery-card-inner">
-                        <div class="gallery-img-wrapper">
-                            <img src="imag/img_2.jpg" class="gallery-img" alt="Memory 2">
-                        </div>
-                        <div class="gallery-card-caption">
-                            <h3>That Special One</h3>
-                            <p>Meri Banogi kya 🌟</p>
+                    <!-- CARD 2 -->
+                    <div class="gallery-card reveal-card">
+                        <div class="gallery-card-inner">
+                            <div class="gallery-img-wrapper">
+                                <img src="images/img_2.jpg" class="gallery-img" alt="Memory 2">
+                            </div>
+                            <div class="gallery-card-caption">
+                                <h3>That Special One</h3>
+                                <p>Meri Banogi kya 🌟</p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- CARD 3 -->
-                <div class="gallery-card reveal-card">
-                    <div class="gallery-card-inner">
-                        <div class="gallery-img-wrapper">
-                            <img src="imag/img_3.jpg" class="gallery-img" alt="Memory 3">
-                        </div>
-                        <div class="gallery-card-caption">
-                            <h3>Everyday Magic</h3>
-                            <p>Ik Kudi 💫</p>
+                    <!-- CARD 3 -->
+                    <div class="gallery-card reveal-card">
+                        <div class="gallery-card-inner">
+                            <div class="gallery-img-wrapper">
+                                <img src="images/img_3.jpg" class="gallery-img" alt="Memory 3">
+                            </div>
+                            <div class="gallery-card-caption">
+                                <h3>Everyday Magic</h3>
+                                <p>Ik Kudi 💫</p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- CARD 4 -->
-                <div class="gallery-card reveal-card">
-                    <div class="gallery-card-inner">
-                        <div class="gallery-img-wrapper">
-                            <img src="imag/img4.jpg" class="gallery-img" alt="Memory 4">
-                        </div>
-                        <div class="gallery-card-caption">
-                            <h3>Together Forever</h3>
-                            <p>Adat 💕</p>
+                    <!-- CARD 4 -->
+                    <div class="gallery-card reveal-card">
+                        <div class="gallery-card-inner">
+                            <div class="gallery-img-wrapper">
+                                <img src="images/img4.jpg" class="gallery-img" alt="Memory 4">
+                            </div>
+                            <div class="gallery-card-caption">
+                                <h3>Together Forever</h3>
+                                <p>Adat 💕</p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- CARD 5 -->
-                <div class="gallery-card reveal-card">
-                    <div class="gallery-card-inner">
-                        <div class="gallery-img-wrapper">
-                            <img src="imag/img5.jpg" class="gallery-img" alt="Memory 5">
-                        </div>
-                        <div class="gallery-card-caption">
-                            <h3>Date right?</h3>
-                            <p>Rakhlo Tum Chupaake 🎉</p>
+                    <!-- CARD 5 -->
+                    <div class="gallery-card reveal-card">
+                        <div class="gallery-card-inner">
+                            <div class="gallery-img-wrapper">
+                                <img src="images/img5.jpg" class="gallery-img" alt="Memory 5">
+                            </div>
+                            <div class="gallery-card-caption">
+                                <h3>Date right?</h3>
+                                <p>Rakhlo Tum Chupaake 🎉</p>
+                            </div>
                         </div>
                     </div>
-                </div>
+
+                </div> <!-- Close gallery-track -->
+            </div> <!-- Close gallery-scroll-container -->
+
+            <div class="gallery-scroll-hint reveal"
+                style="text-align: center; margin-top: 1rem; color: rgba(255,255,255,0.5);">
+                <span>DRAG TO EXPLORE &rarr;</span>
+            </div>
+
+        </div> <!-- Close gallery-content -->
+    </section> <!-- Close section-gallery -->
     <!-- ================================================================== -->
     <!-- SECTION 4: LOVE LETTER / MESSAGE                                   -->
     <!-- ================================================================== -->
@@ -207,8 +218,10 @@
                 <h2 class="message-title">To My Duffer ❤️</h2>
                 <div class="message-text" id="typewriter-text">
                     <p>
-                        Sorry for being so lazy and not updating you where i am and taking this as burden.
-                        Actually it isn't a burden for me to be with you. I rather not impress this time.
+                        Sorry for being so lazy and not updating you where i am and taking this as
+                        burden.
+                        Actually it isn't a burden for me to be with you. I rather not impress this
+                        time.
                         I love you more than words could ever express.
                     </p>
                     <p>
@@ -262,11 +275,11 @@
             <span class="music-label">Play Song</span>
         </button>
         <div class="volume-controls">
-            <input type="range" id="seekSlider" class="volume-slider" aria-label="Seek">
+            <input type="range" id="seekSlider" class="volume-slider" step="0.1" aria-label="Seek">
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 
-            </html>
+</html>
