--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="images/img_1.jpg" class="gallery-img" alt="Memory 1">
+                                <img src="imag/img_1.jpg" class="gallery-img" alt="Memory 1">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>Our First Date</h3>
@@ -146,7 +146,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="images/img_2.jpg" class="gallery-img" alt="Memory 2">
+                                <img src="imag/img_2.jpg" class="gallery-img" alt="Memory 2">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>That Special One</h3>
@@ -159,7 +159,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="images/img_3.jpg" class="gallery-img" alt="Memory 3">
+                                <img src="imag/img_3.jpg" class="gallery-img" alt="Memory 3">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>Everyday Magic</h3>
@@ -172,7 +172,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="images/img4.jpg" class="gallery-img" alt="Memory 4">
+                                <img src="imag/img4.jpg" class="gallery-img" alt="Memory 4">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>Together Forever</h3>
@@ -185,7 +185,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="images/img5.jpg" class="gallery-img" alt="Memory 5">
+                                <img src="imag/img5.jpg" class="gallery-img" alt="Memory 5">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>Date right?</h3>
