--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Base URL for GitHub Pages so images and assets load correctly -->
+    <base href="https://vickoji.github.io/valen/">
     <title>Happy Valentine's Day ❤️</title>
     <meta name="description" content="A special Valentine's Day page for the love of my life">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -133,7 +135,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="/valen/imag/img_1.jpg" class="gallery-img" alt="Memory 1">
+                                <img src="imag/img_1.jpg" class="gallery-img" alt="Memory 1">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>Our First Date</h3>
@@ -146,7 +148,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="/valen/imag/img_2.jpg" class="gallery-img" alt="Memory 2">
+                                <img src="imag/img_2.jpg" class="gallery-img" alt="Memory 2">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>That Special One</h3>
@@ -159,7 +161,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="/valen/imag/img_3.jpg" class="gallery-img" alt="Memory 3">
+                                <img src="imag/img_3.jpg" class="gallery-img" alt="Memory 3">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>Everyday Magic</h3>
@@ -172,7 +174,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="/valen/imag/img4.jpg" class="gallery-img" alt="Memory 4">
+                                <img src="imag/img4.jpg" class="gallery-img" alt="Memory 4">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>Together Forever</h3>
@@ -185,7 +187,7 @@
                     <div class="gallery-card reveal-card">
                         <div class="gallery-card-inner">
                             <div class="gallery-img-wrapper">
-                                <img src="/valen/imag/img5.jpg" class="gallery-img" alt="Memory 5">
+                                <img src="imag/img5.jpg" class="gallery-img" alt="Memory 5">
                             </div>
                             <div class="gallery-card-caption">
                                 <h3>Date right?</h3>
